--- a/style.css
+++ b/style.css
@@ -148,3 +148,28 @@ main .informacao button:hover{
         gap: 10px;
     }
 }
+@media (max-width: 1440px){
+    .attribution{
+        background-color: #ffff;
+        padding: 5px;
+        border-radius: 10px;
+        font-size: 10px;
+        /* margin-top: 20px; */
+        font-family: 'Montserrat', sans-serif;
+        position: absolute;
+        bottom: 0;
+        font-size: 14px;
+    }
+    .attribution a{
+        text-decoration: none;
+        transition: 0.6s ease-in-out;
+        padding: 5px;
+        
+    }
+    .attribution a:hover{
+        padding: 5px;
+        background-color: rgba(88, 88, 212, 0.26);
+        border-radius: 5px;
+        transition: 0.6s ease-in-out;
+    }
+}
