--- a/style.css
+++ b/style.css
@@ -90,8 +90,10 @@ main .informacao button img{
 
 main .informacao button:hover{
     background-color: hsl(158, 81%, 47%);
+    
     transition: 0.5s ease-in-out;
 }
+
 .attribution{
     background-color: #ffff;
     padding: 20px;
@@ -115,6 +117,7 @@ main .informacao button:hover{
     transition: 0.6s ease-in-out;
 }
 
+
 @media (max-width: 698px){
     main{
         display: block;
@@ -131,6 +134,15 @@ main .informacao button:hover{
     .attribution {
         font-size: 0;
         padding: 0;
+        background-color: rgb(247, 248, 246);
+        width: 350px;
+        margin-top: 20px;
+        position: absolute;
+        margin-top: 100px;
+        bottom:0 auto;
+    }
+    ..attribution a{
+        font-size: 0px;
     }
     main .informacao h2{
         margin-bottom: 10;
@@ -166,5 +178,15 @@ main .informacao button:hover{
         padding: 5px;
         background-color: rgba(88, 88, 212, 0.26);
         border-radius: 5px;
+    }
+}
+@media (max-width:414px){
+    .attribution{
+        background-color: rgba(255, 255, 255, 0);
+        color: rgba(255, 0, 0, 0);
+        margin-bottom: 120px;
+    }
+    .attribution a{
+        color: rgba(255, 255, 255, 0);
     }
 }
